Exercises-part-3/exercise-3.02/manifests/log-output-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-files
          emptyDir: {}
      containers:
      - name: writer
        imagePullPolicy: Always
        image: sirpacoder/writer:v3.02
        volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/shared/files
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      - name: reader
        imagePullPolicy: Always
        image: sirpacoder/reader:v3.02
        volumeMounts:
          - name: shared-files
            mountPath: /usr/src/app/shared/files
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
