Exercises-part-3/exercise-3.02/manifests/pingpong-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
      - name: pingpong
        image: sirpacoder/pingpong:v3.02 # latest version of pingpong image
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "516Mi"
            cpu: "500m"
