Exercises-part-3/exercise-3.02/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: pingpong-log
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
