Exercises-part-3/exercise-3.02/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: pingpong-log
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
