Exercises-part-3/exercise-3.02/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output
  namespace: pingpong-log
  labels:
    name: log-output
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port: 
              number: 80
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port: 
              number: 80
      - path: /reset-count
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port: 
              number: 80
